Fix font size on small devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,7 +96,7 @@ h1 .char:hover {
 
 @media screen and (max-width: 900px) {
   h1 {
-    font-size: 96;
+    font-size: 96px;
   }
 }
 
